--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,7 +1,7 @@
 blank_issues_enabled: false
 contact_links:
   - name: 📚 Learning Note
-    url: https://github.com/barmao/backend-knowledge-base/issues/new?template=learning-note.md
+    url: https://github.com/barmao/backend-knowledge-base/issues/new?template=learning-note.md&title=Learn%3A+%5BTopic+Name%5D
     about: Document something you learned
   - name: 💬 Get Writing Help
     url: https://github.com/barmao/backend-knowledge-base/discussions
