--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -3,6 +3,9 @@ contact_links:
   - name: 📚 Learning Note
     url: https://github.com/barmao/backend-knowledge-base/issues/new?template=learning-note.md&title=Learn%3A+%5BTopic+Name%5D
     about: Document something you learned
+  - name: 🧪 Test Simple Template
+    url: https://github.com/barmao/backend-knowledge-base/issues/new?template=test-simple.md&title=Test%3A+%5BTopic%5D
+    about: Test the template system
   - name: 💬 Get Writing Help
     url: https://github.com/barmao/backend-knowledge-base/discussions
     about: Ask questions about technical writing
